# Campaign-War-room

./: .gitignore  README.md  vercel.json
api/: _lib.py  health.py  narrative.py  state.py
backend/: .env.example  pyproject.toml
backend/warroom/: __init__.py  anomalies.py  app.py  config.py  coupler_check.py  geo.py  metrics_source.py  narrative.py  normalize.py  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.css  types.ts
frontend/src/components/: AnomalyCards.tsx  ErrorBoundary.tsx  Globe.tsx  KpiRail.tsx  NarrativePanel.tsx
frontend/src/hooks/: useWarRoomStream.ts
