[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warroom"
version = "0.1.0"
description = "Real-time marketing War Room — Coupler.io ingestion + Claude narrative + cinematic dashboard"
requires-python = ">=3.10"
dependencies = [
    "anthropic[mcp]>=0.40.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
warroom-seed = "warroom.seed:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["warroom*"]
